:bug: Fix alignment

--- a/public/src/_styles/index.css
+++ b/public/src/_styles/index.css
@@ -59,6 +59,7 @@ a {
 
 .btn > a {
 	color: var(--primary);
+	vertical-align: middle;
 }
 
 .btn img {
